fixed symbol, proved edit

--- a/www.hawaii4two.com/index.html
+++ b/www.hawaii4two.com/index.html
@@ -92,8 +92,11 @@ document.images[pageImageName].src=rollOverArr[pageImageName].outImg.src;
 	<P>
 	<BR>
 	<FONT face=Arial size=2 color="Navy"><B>Welcome to
-	BwanaBob’s!</B><BR>
+	BwanaBob's!</B><BR>
 	</FONT> <BR>
+  <font color="red">
+    Eric wuz here <BR>
+  </font>
 	<FONT face=Arial size=2 color="Black">We are a Luxury Vacation Rental for
 	Couples offering two adorable and enchanting "honeymoon-type" Cottages
 	on our secluded, exquisitely landscaped three-acre Kona coffee plantation
